[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetanic"
version = "0.0.1"
dependencies = [
    "polars",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
spacetanic = "spacetanic:main"
